# cf-python-wats

./: README.md  pyproject.toml
cf_python_wats/: 1.py  3.py  4.py  5.py  6.py  8.py
problems/: 1.py  10.py  2.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py
