[tool.poetry]
name = "cf-python-wats"
version = "0.1.0"
description = ""
authors = ["Héctor Iván Patricio Moreno <hectorivanpatriciomoreno@gmail.com>"]
readme = "README.md"
packages = [{include = "cf_python_wats"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
